Merge of changes 7743, 7746, and 7762, 7765 from the 2.6 branch.
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@7768 7fc7bbf3-cf45-46d4-be06-341739edd864